# paqetN

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FUTURE_FEATURE.md  LICENSE  README.md  build.bat  build.sh  main.cpp
.github/workflows/: build.yml
assets/: assets.qrc
docs/: ARCHITECTURE.md  BUILDING.md  DEVELOPMENT.md  QUICK_START.md
qml/: Main.qml
qml/components/: CustomContentDialog.qml  DetailPanel.qml  GroupCard.qml  HostCard.qml
qml/dialogs/: ConfigEditorDialog.qml  SettingsPage.qml
qml/pages/: HostsPage.qml  LogPage.qml  UpdatesPage.qml
scripts/: build-paqet.ps1  build-paqet.sh  clean-persistents.ps1  rebuild.ps1  rebuild.sh  static-build.ps1
src/: ChildProcessJob.cpp  ChildProcessJob.h  ConfigListModel.cpp  ConfigListModel.h  ConfigRepository.cpp  ConfigRepository.h  CrashHandler.cpp  CrashHandler.h  HttpToSocksProxy.cpp  HttpToSocksProxy.h  LatencyChecker.cpp  LatencyChecker.h  LogBuffer.cpp  LogBuffer.h  NetworkInfoDetector.cpp  NetworkInfoDetector.h  PaqetConfig.cpp  PaqetConfig.h  PaqetController.cpp  PaqetController.h  PaqetRunner.cpp  PaqetRunner.h  SettingsRepository.cpp  SettingsRepository.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h  SystemProxyManager.cpp  SystemProxyManager.h  TunAssetsManager.cpp  TunAssetsManager.h  TunManager.cpp  TunManager.h  UpdateManager.cpp  UpdateManager.h  ZipExtractor.h
tests/: test_http2socks.cpp
